fixed hero responsive spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,13 +82,19 @@ em {
   h1 {
     font-size: 26px;
     line-height: 40px;
+    padding-left: 2em;
+    padding-right: 2em;
   }
+
+  .col-sm-8 {
+    flex-grow: 3;
+  }
+
   .col-sm-4 {
     display: none;
   }
   .button-style {
     font-size: 20px;
-    /* line-height: 12px; */
     padding: 14px 24px;
   }
 }
